--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -6,37 +6,104 @@
  */
 
 body {
-  background: #d4d4d4 url("../images/background.png");
-  font-family: sans-serif; }
+  background: white;
+  font-size: 62.5%; // this makes 1 em equal to 10px
+  font-family: sans-serif;
+  p{
+    font-size: 2em;
+  }
+}
 
+#open-sidebar-button{
+  position: absolute;
+  top: 2vh;
+  left: 5vw;
+}
+
+$main-width: 960px;
 main {
   padding-top: 2em;
+  width: $main-width;
+  margin: auto;
 }
 
 p{
   font-family: 'PT Serif', serif;
 }
 
-$main-width: 960px;
-main {
-  width: $main-width;
-  margin: auto;
+
+#homepage{
+  text-align: center;
   h1{
     color: #606060;
-    font: 80px/1.2em "noticia text", serif;
-    margin-bottom: -0.6em;
-    /* display: inline-block; */
+    font: 7em "noticia text", serif;
   }
   h2{
-    /* display: inline-block; */
     color: #606060;
-    font: 46px/1.2em "noticia text", serif;
+    font: 4em "noticia text", serif;
   }
-  h3{
+  ul{
+    display: inline-block;
+    margin-top: 6em;
+    li{
+      display: inline-block;
+      color: #606060;
+      font-size: 3em;
+      margin: 0 1.5em;
+    }
+  }
+  #homepage-language{
+    position: absolute;
+    bottom: 10vh;
+    left: 0;
+    right: 0;
+    margin: auto;
     color: #606060;
-    font: 35px/1.2em "noticia text", serif;
+    font-size: 2.5em;
   }
 }
+
+#sidebar-menu{
+  /* position: fixed; */
+  /* top: 0; */
+  /* left: 0; */
+  float: left;
+  height: 100vh;
+  overflow: hidden;
+  background: silver;
+  ul{
+    margin-top: 25vh;
+    max-width: 90%;
+    white-space: nowrap;
+    li{
+      list-style-type: none;
+      font-size: 3em;
+      line-height: 1.5em;
+    }
+  }
+  transition: width 0.5s;
+  &.closed-sidebar{
+    width: 0;
+  }
+  &.open-sidebar{
+    width: 20%;
+  }
+  #close-sidebar-button{
+    float: right;
+    margin-top: 2vh;
+    margin-right: 5%;
+  }
+}
+
+.myphoto-container{
+  float: right;
+  height: 300px;
+  img{
+    max-height: 100%;
+  }
+}
+
+/* ========== */
 
 #homepage-myphoto-myname-container {
   clear:both;
