--- a/source/localizable/_side-menu.ru.html.haml
+++ b/source/localizable/_side-menu.ru.html.haml
@@ -1,4 +1,9 @@
-%ul
-  %li Раз
-  %li Два
-  %li Три
+#sidebar-menu.closed-sidebar
+  #close-sidebar-button
+    X
+  %ul
+    %li о себе
+    %li проекты
+    %li блог
+    %li прочее
+
