--- a/source/layouts/home-layout.haml
+++ b/source/layouts/home-layout.haml
@@ -1,6 +1,13 @@
-%script(src="../javascripts/all.js")
-
-%h1 This is home layout
-
-%body{class: page_classes}
-  = yield
+!!!
+%html
+  %head
+    %meta{:charset => "utf-8"}/
+    / Always force latest IE rendering engine or request Chrome Frame
+    %meta{:content => "IE=edge,chrome=1", "http-equiv" => "X-UA-Compatible"}/
+    / Use title if it's in the page YAML frontmatter
+    %title= current_page.data.title || "The Middleman"
+    = stylesheet_link_tag "normalize", "all"
+    %link{:href => "http://fonts.googleapis.com/css?family=PT+Serif&subset=latin,cyrillic,cyrillic-ext,latin-ext", :rel => "stylesheet", :type => "text/css"}/
+    = javascript_include_tag  "all"
+  %body{:class => page_classes}
+    = yield
