--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -14,16 +14,134 @@ body {
   }
 }
 
+// MENU BUTTON
+
 #open-sidebar-button{
   position: absolute;
   top: 2vh;
   left: 5vw;
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  border: 1px solid;
+  border-radius: 50%;
+  box-shadow: 1px 2px 1px #888888;
+  text-align: center;
+  svg{
+    width: 75%;
+    vertical-align: middle;
+  }
+  &:hover{
+    svg{
+      *{
+        fill: green;
+      }
+    }
+  }
+}
+
+/* Wobble Vertical */
+@-webkit-keyframes hvr-wobble-vertical {
+  16.65% {
+    -webkit-transform: translateY(8px);
+    transform: translateY(3px);
+  }
+
+  33.3% {
+    -webkit-transform: translateY(-6px);
+    transform: translateY(-2px);
+  }
+
+  49.95% {
+    -webkit-transform: translateY(4px);
+    transform: translateY(2px);
+  }
+
+  66.6% {
+    -webkit-transform: translateY(-2px);
+    transform: translateY(-1px);
+  }
+
+  83.25% {
+    -webkit-transform: translateY(1px);
+    transform: translateY(1px);
+  }
+
+  100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+}
+
+@keyframes hvr-wobble-vertical {
+  16.65% {
+    -webkit-transform: translateY(8px);
+    transform: translateY(3px);
+  }
+
+  33.3% {
+    -webkit-transform: translateY(-6px);
+    transform: translateY(-2px);
+  }
+
+  49.95% {
+    -webkit-transform: translateY(4px);
+    transform: translateY(2px);
+  }
+
+  66.6% {
+    -webkit-transform: translateY(-2px);
+    transform: translateY(-1px);
+  }
+
+  83.25% {
+    -webkit-transform: translateY(1px);
+    transform: translateY(1px);
+  }
+
+  100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+}
+
+.hvr-wobble-vertical {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -moz-osx-font-smoothing: grayscale;
+}
+.hvr-wobble-vertical:hover, .hvr-wobble-vertical:focus, .hvr-wobble-vertical:active {
+  -webkit-animation-name: hvr-wobble-vertical;
+  animation-name: hvr-wobble-vertical;
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-timing-function: ease-in-out;
+  animation-timing-function: ease-in-out;
+  -webkit-animation-iteration-count: 1;
+  animation-iteration-count: 1;
 }
 
 $main-width: 960px;
 main {
+  display: inline-block;
+  float: right;
+  transition: width 0.5s;
+  &.with-sidemenu-closed{
+    width: 100%;
+  }
+  &.with-sidemenu-open{
+    width: 80%;
+  }
+}
+
+.content{
   padding-top: 2em;
-  width: $main-width;
+  max-width: $main-width;
   margin: auto;
 }
 
@@ -64,10 +182,11 @@ p{
 }
 
 #sidebar-menu{
-  /* position: fixed; */
-  /* top: 0; */
-  /* left: 0; */
-  float: left;
+  position: fixed;
+  top: 0;
+  left: 0;
+  /* float: left; */
+  display: inline-block;
   height: 100vh;
   overflow: hidden;
   background: silver;
@@ -100,6 +219,31 @@ p{
   height: 300px;
   img{
     max-height: 100%;
+  }
+}
+
+// BIBLIOGRAPHY
+#bibliography{
+  h2{
+    text-align: left;
+    text-transform: uppercase;
+    font: 3em "noticia text", serif;
+  }
+  h3{
+    text-align: center;
+    text-transform: uppercase;
+    font: 2.2em "noticia text", serif;
+  }
+  .authors{
+    font-style: italic;
+  }
+  .title{
+    font-weight: bold;
+  }
+  .comment{
+    margin-top: 1em;
+    padding-top: 0;
+    font-size: 1.5em;
   }
 }
 
