Created the english version of the 'Other' page

--- a/source/localizable/other.en.html.haml
+++ b/source/localizable/other.en.html.haml
@@ -1,154 +1,154 @@
 ---
-title: Андрей Азов — Прочее
+title: Andrey Azov — Other
 ---
 
-%p Здесь я собрал свою библиографию, выкинув из нее несколько совсем уж никудышных статей.
+%p Here I collected a list of my translations, original publications and talks (except for some least important ones).
 
 
-Медицина
-Художественная литература
-Филология
-Видеозаписи
+Health Sciences
+Fiction
+Humanities
+Videos
 
 
 #bibliography
   .portfolio-section{:data => {:order => 1}}
     .book-container
-      %h2 Медицина
-      %h3 Перевод и редактирование иностранной литературы
+      %h2 Health Sciences
+      %h3 English to Russian Translations
       .book
         .flip-container
           .flipper
             .front
-              =image_tag 'covers/olympic-ru.jpg'
-            .back
               =image_tag 'covers/olympic-eng.jpg'
+            .back
+              =image_tag 'covers/olympic-ru.jpg'
         .book-description-container
           .book-description
             %p
               %span.authors
-                Швеллнус М.
+                M. P. Schwellnus (ed.).
               %span.title
-                Олимпийское руководство по спортивной медицине.
-              М.: Практика, 2011. 672 с.
+                The Olympic Textbook of Medicine in Sport.
+              The Encyclopaedia of Sports Medicine. Volume XIV. Wiley-Blackwell. 2008.
             %p.comment
-              (перевод гл. 15 «Спортсмены-инвалиды», стр. 483—499)
+              (translated chapter 15, Medical Care of the Disabled Athlete)
       .book
         .flip-container
           .flipper
             .front
-              =image_tag 'covers/taping-ru.jpg'
-            .back
               =image_tag 'covers/taping-eng.jpg'
+            .back
+              =image_tag 'covers/taping-ru.jpg'
         .book-description-container
           .book-description
             %p
               %span.authors
-                Перрин Д.
+                D. Perrin.
               %span.title
-                Повязки и ортезы в спортивной медицине.
-              М.: Практика, 2011. 192 с.
+                Athletic Taping and Bracing, 2nd Edition.
+              Human Kinetics, 2005
             %p.comment
-              (редактор перевода, переводчик видеофильма на прилагаемом к книге DVD)
+              (edited the Russian translation; translated educational videos on the complementary DVD)
       .book
         .flip-container
           .flipper
             .front
-              =image_tag 'covers/sport-trauma-ru.jpg'
-            .back
               =image_tag 'covers/sport-trauma-eng.jpg'
+            .back
+              =image_tag 'covers/sport-trauma-ru.jpg'
         .book-description-container
           .book-description
             %p
               %span.authors
-                Макмаон П. (ред.)
+                P. McMahon (ed.)
               %span.title
-                Спортивная травма: диагностика и лечение.
-              М.: Практика, 2011. 366 с.
+                Current Diagnosis and Treatment in Sports Medicine.
+              LANGE, 2006.
             %p.comment
-              (перевод гл. 2, 5)
+              (translated chapters 2 and 5)
       .book
         .flip-container
           .flipper
             .front
-              =image_tag 'covers/smith-ru.jpg'
-            .back
               =image_tag 'covers/smith-eng.jpg'
+            .back
+              =image_tag 'covers/smith-ru.jpg'
         .book-description-container
           .book-description
             %p
               %span.authors
-                Джонс К. Л.
+                K. Jones.
               %span.title
-                Наследственные синдромы по Дэвиду Смиту. Атлас-справочник.
-              М.: Практика, 2011. 1024 с. 
+                Smith’s Recognizable Patterns Of Human Malformation, 6th Edition.
+              Saunders, 2005.
             %p.comment
-              (сопереводчик и редактор перевода)
+              (translated a large portion of the book and edited the entire Russian translation)
       .book
         .flip-container
           .flipper
             .front
-              =image_tag 'covers/trauma-ru.jpg'
-            .back
               =image_tag 'covers/trauma-eng.jpg'
+            .back
+              =image_tag 'covers/trauma-ru.jpg'
         .book-description-container
           .book-description
             %p
               %span.authors
-                Мур Э., Мэттокс К., Феличиано Д. (ред.)
+                E. E. Moore, K. L. Mattox, D. V. Feliciano.
               %span.title
-                Экстренная медицинская помощь при травме.
-              М.: Практика, 2010.
+                Trauma Manual, 4th Edition.
+              McGraw-Hill, 2002.
             %p.comment
-              (перевод глав 2, 4)
+              (translated chapters 2 and 4)
       .book
         .flip-container
           .flipper
             .front
-              =image_tag 'covers/lymphoma-ru.jpg'
-            .back
               =image_tag 'covers/lymphoma-eng.jpg'
+            .back
+              =image_tag 'covers/lymphoma-ru.jpg'
         .book-description-container
           .book-description
             %p
               %span.authors
-                Холман П., Гарретт Д., Джансен У.
+                P. Holman, ‎J. Garrett, ‎W. D. Jansen.
               %span.title
-                Лимфомы и лимфогранулематоз.
-              М.: Практика, 2007. 137 с. (Серия «100 вопросов врачу».)
+                100 Questions & Answers About Lymphoma
+              Jones and Bartlett, 2004.
             %p.comment
-              (редактор перевода)      
+              (edited the Russian translation)
       .book
         .flip-container
           .flipper
             .front
-              =image_tag 'covers/pathology-secrets-ru.jpg'
-            .back
               =image_tag 'covers/pathology-secrets-eng.jpg'
+            .back
+              =image_tag 'covers/pathology-secrets-ru.jpg'
         .book-description-container
           .book-description
             %p
               %span.authors
-                Дамианов И.
+                I. Damjanov.
               %span.title
-                Секреты патологии.
-              М.: Медицинское информационное агентство, 2006. 812 с.
+                Pathology Secrets.
+              Hanley & Belfus, 2002.
       .book
         .flip-container
           .flipper
             .front
-              =image_tag 'covers/obstetrics-ru.jpg'
-            .back
               =image_tag 'covers/obstetrics-eng.jpg'
+            .back
+              =image_tag 'covers/obstetrics-ru.jpg'
         .book-description-container
           .book-description
             %p
               %span.authors
-                Кэмпбелл С., Лиз К. (ред.)
+                S. Campbell, C. Lees.
               %span.title
-                Акушерство от десяти учителей.
-              М.: Медицинское информационное агентство, 2004. 464 с.
-      %h3 Редактирование отечественной литературы
+                Obstetrics by Ten Teachers, 17th Edition.
+              CRC Press, 2000.
+      %h3 Editing of Original Russian Medical Literature
       .book
         .flip-container
           =image_tag 'covers/hip-replacement.jpg'
@@ -309,3 +309,5 @@ title: Андрей Азов — Прочее
           %li 
             =link_to 'Воспаление: к истории слова и понятия', '/pdfs/inflammation.pdf'
             \// Вопросы русского языкознания: Сб. Вып. XIII. Фонетика и грамматика: настоящее, прошедшее, будущее: К 50‑летию научной деятельности Софьи Константиновны Пожарицкой / Сост. С. В. Князев, А. В. Птенцова; отв. ред. М. Л. Ремнёва, С. В. Князев. М.: Изд-во МГУ, 2010. С. 323–329.
+
+
