Added the english Projects page

--- a/source/localizable/other.en.html.haml
+++ b/source/localizable/other.en.html.haml
@@ -32,7 +32,7 @@ Videos
                 The Olympic Textbook of Medicine in Sport.
               The Encyclopaedia of Sports Medicine. Volume XIV. Wiley-Blackwell. 2008.
             %p.comment
-              (translated chapter 15, Medical Care of the Disabled Athlete)
+              (translated chapter 15)
       .book
         .flip-container
           .flipper
@@ -156,16 +156,25 @@ Videos
           .book-description
             %p
               %span.authors
-                Середа А. П.
+                A. P. Sereda
               %span.title
-                Эндопротезирование тазобедренного сустава. Ответы на все вопросы.
-              М.: Гранат, 2014. 121 с.
+                Hip Replacement: All Questions Answered.
+              Granat, 2014.
+            %p.comment
+              (original title: Середа А. П. Эндопротезирование тазобедренного сустава. Ответы на все вопросы. М.: Гранат, 2014. 121 с.)
       .book
         .flip-container
           =image_tag 'covers/eponyms-endocrinology.jpg'
         .book-description-container
           .book-description
-            %p <em>Мельниченко Г. А., Петеркова В. А., Тюльпаков А. Н., Максимова Н. В.</em> <strong>Эпонимические синдромы в эндокринологии.</strong> М.: Практика, 2013. 172 с.
+            %p
+              %span.authors
+                G. A. Melnichenko, V. A. Peterkova, A. N. Тulpakov, N. V. Maksimova.
+              %span.title
+                Eponymic Diseases in Endocrinology.
+              Practica, 2013.
+            %p.comment
+              (original title: Мельниченко Г. А., Петеркова В. А., Тюльпаков А. Н., Максимова Н. В. Эпонимические синдромы в эндокринологии. М.: Практика, 2013. 172 с.)
       .book
         .flip-container
           =image_tag 'covers/eponyms-pulmonology.jpg'
@@ -173,118 +182,113 @@ Videos
           .book-description
             %p
               %span.authors
-                Розинова Н. Н., Лев Н. С., Богорад А. Е.
+                N. N. Rozinova, N. S. Lev, A. E. Bogorad
               %span.title
-                Эпонимические синдромы в пульмонологии.
-              М.: Практика, 2011. 87 с.
+                Eponymic Diseases in Pulmonology.
+              Practica, 2011.
+            %p.comment
+              (original title: Розинова Н. Н., Лев Н. С., Богорад А. Е. Эпонимические синдромы в пульмонологии. М.: Практика, 2011. 87 с.)
 
-      %h3 Статьи (избранные)
+      %h3 Selected Research Papers
       .article-description
         %ol
           %li
-            =link_to 'A. G. Azov, J. Koch, S. J. Hamilton-Dutoit. Improved diagnosis of mycobacterial infections in formalin-fixed and paraffin-embedded sections with nested polymerase chain reaction', '/pdfs/diagnosis-of-mycobacterial-infections-with-nested-PCR.pdf'
-            \// Acta Pathologica, Microbiologica et Immunologica Scandinavica. 113:589–93, 2005.
+            :markdown
+              A. G. Azov, J. Koch, S. J. Hamilton-Dutoit. Improved diagnosis of mycobacterial infections in formalin-fixed and paraffin-embedded sections with nested polymerase chain reaction // Acta Pathologica, Microbiologica et Immunologica Scandinavica. 113:589–93, 2005 ([pdf](/pdfs/diagnosis-of-mycobacterial-infections-with-nested-PCR.pdf)).
 
   .portfolio-section{:data => {:order => 2}}
     .book-container
-      %h2{style: "clear: both"} Художественная литература
-      %h3 Перевод
+      %h2{style: "clear: both"} Fiction
+      %h3 English to Russian Translations
 
       .book
         .flip-container
           .flipper
             .front
-              =image_tag 'covers/wicked-ru.jpg'
-            .back
               =image_tag 'covers/wicked-eng.jpg'
+            .back
+              =image_tag 'covers/wicked-ru.jpg'
         .book-description-container
           .book-description
             %p
               %span.authors
-                Магвайр Г.
+                Gregory Maguire.
               %span.title
-                Ведьма: жизнь и времена Западной колдуньи из страны Оз.
-              М.: АСТ, 2008. 414 с.
+                Wicked: The Life and Times of the Wicked Witch of the West.
       .book
         .flip-container
           .flipper
             .front
-              =image_tag 'covers/wolitzer-ru.jpg'
-            .back
               =image_tag 'covers/wolitzer-eng.jpg'
+            .back
+              =image_tag 'covers/wolitzer-ru.jpg'
         .book-description-container
           .book-description
             %p
               %span.authors
-                Уолитцер М.
+                Meg Wolitzer.
               %span.title
-                Позиция.
-              М.: АСТ, 2007. 318 с.
+                The Position.
       .book
         .flip-container
           .flipper
             .front
-              =image_tag 'covers/buettner-ru.jpg'
-            .back
               =image_tag 'covers/buettner-eng.jpg'
+            .back
+              =image_tag 'covers/buettner-ru.jpg'
         .book-description-container
           .book-description
             %p
               %span.authors
-                Бюттнер Р.
+                Robert Buettner.
               %span.title
-                Сироты.
-              М.: АСТ, 2006. 319 с.
+                Orphanage.
       .book
         .flip-container
           .flipper
             .front
-              =image_tag 'covers/vreeland-ru.jpg'
-            .back
               =image_tag 'covers/vreeland-eng.jpg'
+            .back
+              =image_tag 'covers/vreeland-ru.jpg'
         .book-description-container
           .book-description
             %p
               %span.authors
-                Вриланд С.
+                Susan Vreeland.
               %span.title
-                Девушка в нежно-голубом.
-              М.: АСТ, 2006. 252 с.
+                Girl in Hyacinth Blue.
       .book
         .flip-container
           .flipper
             .front
-              =image_tag 'covers/nostradamus-ru.jpg'
-            .back
               =image_tag 'covers/nostradamus-eng.jpg'
+            .back
+              =image_tag 'covers/nostradamus-ru.jpg'
         .book-description-container
           .book-description
             %p
               %span.authors
-                Коупленд Д.
+                Douglas Coupland.
               %span.title
-                Эй, Нострадамус!
-              М.: АСТ, 2004. 254 с.
+                Hey Nostradamus!
       .book
         .flip-container
           .flipper
             .front
-              =image_tag 'covers/cuthbert-ru.jpg'
-            .back
               =image_tag 'covers/cuthbert-eng.jpg'
+            .back
+              =image_tag 'covers/cuthbert-ru.jpg'
         .book-description-container
           .book-description
             %p
               %span.authors
-                Вудхауз П. Г.
+                P. G. Wodehouse.
               %span.title
-                Бить будет Катберт
-              \/ П. Г. Вудхауз. Золотце ты наше. Простак в стране чудес. Рассказы. М.: Полиграф Опт, 2004. 519 с.
+                The Clicking of Cuthbert.
 
   .portfolio-section{:data => {:order => 3}}
     .book-container
-      %h2 Гуманитарные науки
-      %h3 Монографии
+      %h2 Humanities
       .book
         .flip-container
           =image_tag 'covers/bukvalisty.jpg'
@@ -292,17 +296,21 @@ Videos
           .book-description
             %p
               %span.authors
-                Азов А. Г.
+                A. G. Azov.
               %span.title  
-                Поверженные буквалисты: Из истории художественного перевода в СССР в 1920—1960-е годы.
-              М.: Издательский дом Высшей школы экономики, 2013. 300 с.
-      %h3 Статьи (избранные)
+                The Literalists Defeated: An Episode from the History of Translation in the USSR in the 1920–1960s.
+            %p.comment             
+              (original title: Азов А. Г. Поверженные буквалисты: Из истории художественного перевода в СССР в 1920—1960-е годы. М.: Издательский дом Высшей школы экономики, 2013. 300 с.)
+      %h3 Selected Papers
       .article-description
+        %h4 In English
         %ol
-          %li <a href="http://tekstologia.jimdo.com/app/download/8704868093/Azov.pdf?t=1394521564">О переиздании перевода «Посмертных записок Пиквикского клуба» под редакцией Густава Шпета</a> // Текстология и историко-литературный процесс: II Международная конференция молодых исследователей (Москва, Московский государственный университет им. М. В. Ломоносова, филологический факультет, 21—22 марта 2013 г.): Сборник статей. М.: Лидер, 2014. С. 158–176.
           %li 
             =link_to '“Barbaric Yawp” in Russian', '/pdfs/yawp-russian.pdf'
             \// Rocznik Komparatystyczny (Comparative Yearbook). 2013. No. 4. P. 321–325.
+        %h4 In Russian
+        %ol
+          %li <a href="http://tekstologia.jimdo.com/app/download/8704868093/Azov.pdf">О переиздании перевода «Посмертных записок Пиквикского клуба» под редакцией Густава Шпета</a> // Текстология и историко-литературный процесс: II Международная конференция молодых исследователей (Москва, Московский государственный университет им. М. В. Ломоносова, филологический факультет, 21—22 марта 2013 г.): Сборник статей. М.: Лидер, 2014. С. 158–176.
           %li
             =link_to 'К истории теории перевода в Советском Союзе. Проблема реалистического перевода', 'http://www.logosjournal.ru/arch/22/art_163.pdf'
             \// Логос. 2012. № 3. С. 131–152.
