--- a/source/localizable/other.ru.html.haml
+++ b/source/localizable/other.ru.html.haml
@@ -32,7 +32,7 @@ title: Андрей Азов — Прочее
                 Олимпийское руководство по спортивной медицине.
               М.: Практика, 2011. 672 с.
             %p.comment
-              (перевод гл. 15 «Спортсмены-инвалиды», стр. 483—499)
+              (перевод гл. 15)
       .book
         .flip-container
           .flipper
@@ -165,7 +165,12 @@ title: Андрей Азов — Прочее
           =image_tag 'covers/eponyms-endocrinology.jpg'
         .book-description-container
           .book-description
-            %p <em>Мельниченко Г. А., Петеркова В. А., Тюльпаков А. Н., Максимова Н. В.</em> <strong>Эпонимические синдромы в эндокринологии.</strong> М.: Практика, 2013. 172 с.
+            %p
+              %span.authors
+                Мельниченко Г. А., Петеркова В. А., Тюльпаков А. Н., Максимова Н. В.
+              %span.title
+                Эпонимические синдромы в эндокринологии.
+              М.: Практика, 2013. 172 с.
       .book
         .flip-container
           =image_tag 'covers/eponyms-pulmonology.jpg'
