--- a/source/blog/index.html.haml
+++ b/source/blog/index.html.haml
@@ -1,4 +1,5 @@
 ---
+title: My Blog
 pageable: true
 per_page: 10
 ---
@@ -15,7 +16,8 @@ per_page: 10
   /
     use article.summary(250) if you have Nokogiri available to show just
     the first 250 characters
-  = article.body
+  = article.summary(250)
+  -# = article.body
 - if paginate
   - if next_page
     %p= link_to 'Next page', next_page
