--- a/source/localizable/_side-menu.en.html.haml
+++ b/source/localizable/_side-menu.en.html.haml
@@ -2,8 +2,12 @@
   #close-sidebar-button
     X
   %ul
-    %li about me
-    %li projects
-    %li blog
-    %li other
+    %li 
+      = link_to "about me", "/about.html", :class => ("active" if request.path == "about.html")
+    %li
+      = link_to "projects", "/projects.html", :class => ("active" if request.path == "projects.html")
+    %li
+      = link_to "blog", "/blog/index.html", :class => ("active" if request.path == "blog/index.html")
+    %li
+      = link_to "other", "/other.html", :class => ("active" if request.path == "other.html")
 
