--- a/source/localizable/_side-menu.ru.html.haml
+++ b/source/localizable/_side-menu.ru.html.haml
@@ -2,8 +2,10 @@
   #close-sidebar-button
     X
   %ul
-    %li о себе
+    %li
+      %a{ href: "/russian/about.html", title: "о себе", class: ("active" if request.path == "russian/about.html") } о себе
     %li проекты
-    %li блог
-    %li прочее
-
+    %li
+      %a{ href: "/russian/blog.html", title: "блог", class: ("active" if request.path == "russian/blog.html") } блог
+    %li
+      %a{ href: "/russian/other.html", title: "прочее", class: ("active" if request.path == "russian/other.html") } прочее
