--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -145,10 +145,38 @@ main {
   margin: auto;
 }
 
+h1{
+  font-size: 3.5em;
+}
+
+h2{
+  font-size: 3em;
+  span{
+    &.subheading{
+      font-size: 0.7em;
+      font-style: italic;
+    }
+  }
+}
+
+h3{
+  font-size: 2.5em;
+}
+
 p{
   font-family: 'PT Serif', serif;
 }
 
+a{
+  color: blue;
+  text-decoration: none;
+  &:visited{
+    color: blue;
+  }
+  &:hover{
+    text-decoration: underline;
+  }
+}
 
 #homepage{
   text-align: center;
@@ -198,6 +226,12 @@ p{
       list-style-type: none;
       font-size: 3em;
       line-height: 1.5em;
+      a{
+        &.active{
+          color: red;
+          text-decoration: none;
+        }
+      }
     }
   }
   transition: width 0.5s;
@@ -222,6 +256,10 @@ p{
   }
 }
 
+.figure-with-centered-image{
+  text-align: center;
+}
+
 // BIBLIOGRAPHY
 #bibliography{
   h2{
@@ -233,6 +271,10 @@ p{
     text-align: center;
     text-transform: uppercase;
     font: 2.2em "noticia text", serif;
+  }
+  h4{
+    font: 2em "noticia text", serif;
+    font-weight: bold;
   }
   .authors{
     font-style: italic;
