Fixed some links

--- a/source/localizable/about.en.html.haml
+++ b/source/localizable/about.en.html.haml
@@ -6,7 +6,7 @@ title: Andrey Azov — About me
   =image_tag 'azov.png'
 %p 
   :markdown
-    Hi! My name is Andrey, and I am a web developer. The programming languages I am most confortable with are Ruby and JavaScript. Some of the web projects I’ve been involved in, along with their short descriptions, are listed on the Projects page.
+    Hi! My name is Andrey, and I am a web developer. The programming languages I am most confortable with are Ruby and JavaScript. Some of the web projects I’ve been involved in, along with their short descriptions, are listed on the [Projects](/projects.html) page.
 
     It has been a long journey getting to this point. I graduated from a medical school in Moscow (Russia), worked for a couple of years in a laboratory of medical genetics in Denmark, then came back to study the Russian language and literature in the Moscow State University, only to realize eventually that it is really programming that I really want to be doing for a living. Along the way, I translated and edited a number of medical books and works of fiction from English into Russian. Those are showcased in the [“Other”](/other.html) section of this site.
 
