--- a/source/localizable/index.en.html.haml
+++ b/source/localizable/index.en.html.haml
@@ -9,9 +9,12 @@ title: Andrey Azov
   %ul
     %li 
       = link_to 'about me', '/about.html'
-    %li projects
-    %li blog
-    %li other
+    %li 
+      = link_to 'projects', '/projects.html'
+    %li 
+      = link_to 'blog', '/blog/index.html'
+    %li 
+      = link_to 'other', '/other.html'
 
   #homepage-language
     %p по-русски
