Updated styles for the sidebar

--- a/source/localizable/projects.en.html.haml
+++ b/source/localizable/projects.en.html.haml
@@ -39,7 +39,7 @@ title: My Projects
   %h3 What does the site do
   %p
     :markdown
-      The site aggregates news from different media RSS-feeds and displays them according to their trust rating. The rating is by means of a Chrome extension or a Firefox add-on. It works like this: a user installs an extension in their browser, and then, when they open a news article that exists in the site’s database, the extension will open a popup in the bottom of the page with a scale which the user can then click to vote for how much they trust this news article.
+      The site aggregates news from different media RSS-feeds and displays them according to their trust rating. The rating is generated through a voting process with the help of a Chrome extension or a Firefox add-on. It works like this: a user installs an extension in their browser, and then, when they visit a news website and open an article that Edsays is aware of, a small voting widget will pop up in the bottom of the page so that the user can record how much they trust the contents of this article.
 
   %figure.figure-with-centered-image
     =image_tag 'sites/edsays-2.png'
