--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -10,6 +10,7 @@
     <title><%= current_page.data.title || "The Middleman" %></title>
     
     <%= stylesheet_link_tag "normalize", "all" %>
+    <%= stylesheet_link_tag "code" %>
 
     <link href='http://fonts.googleapis.com/css?family=PT+Serif&subset=latin,cyrillic,cyrillic-ext,latin-ext' rel='stylesheet' type='text/css'>
 
