--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -6,6 +6,8 @@
     <meta charSet="utf-8" />
     <title>{{ title or metadata.title }}</title>
     <meta name="description" content="{{ description or metadata.description }}">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&family=Inter&display=swap" rel="stylesheet">
     <link rel="preload" href="/css/global.css" as="style">
     {% block styles %}{% endblock %}
     {% block scripts %}{% endblock %}
