--- a/src/_includes/layouts/about.njk
+++ b/src/_includes/layouts/about.njk
@@ -4,10 +4,18 @@ templateClass: tmpl-about
 ---
 
 {% block styles %}
+<link rel="preload" href="/css/navigation.css" as="style">
 <link rel="stylesheet" href="{{ '/css/about.css' | url }}">
 {% endblock %}
 
+{% block scripts %}
+<script src="/scripts/navigation.js" type="module"></script>
+{% endblock %}
+
 <main>
+  {% include "components/menu-button.njk" %}
+  {% include "components/nav-sidebar.njk" %}
+
   <picture>
     <source type="image/webp" srcset="/images/azov.webp">
     <source type="image/jpeg" srcset="/images/azov.jpg">
