--- a/src/static/css/about.css
+++ b/src/static/css/about.css
@@ -1,13 +1,14 @@
 @import "global.css";
+@import "navigation.css";
 
 main {
   max-width: 960px;
-  margin: auto;
+  margin: 90px auto;
 }
 
 .about__my-photo {
   border-radius: 100%;
   float: right;
-  width: clamp(50px, 30%, 300px);
+  width: clamp(50px, 30%, 142px);
   margin: 0.6rem;
 }
