--- a/src/static/css/global.css
+++ b/src/static/css/global.css
@@ -16,7 +16,7 @@ body {
 }
 
 main {
-  padding: 0 0.8rem 2rem;
+  padding: 0 1rem 2rem;
 }
 
 p {
@@ -28,6 +28,6 @@ a {
   padding: 0.2rem;
 }
 
-a, a:visited {
+a, a:visited:not([class]) {
   color: blue;
 }
