--- a/src/publications.njk
+++ b/src/publications.njk
@@ -23,7 +23,7 @@ templateClass: tmpl-about
   <h1>Publications</h1>
   <p>
     Here, I collected a list of my publications, both original and where I was
-    translator or editor. The list is almost complete, excepting the least important
+    translator or editor. The list is almost complete, except for the least important
     or, well, the most embarrassing ones.
   </p>
 
