--- a/src/static/css/bibliography.css
+++ b/src/static/css/bibliography.css
@@ -4,6 +4,7 @@
 main {
   max-width: var(--content-width);
   margin: 90px auto;
+  padding-bottom: 3rem;
 }
 
 .bibliography-section {
@@ -11,19 +12,39 @@ main {
 }
 
 .book-list {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.book {
   display: grid;
   grid-template-columns: [book-cover] 250px [book-description] 1fr;
   grid-column-gap: 2rem;
-  grid-row-gap: 2rem;
   align-items: center;
 }
 
-/* @media screen and (max-width: 767px) {
-  width: 100%;
-  height: auto;
-  flex-direction: column;
-  margin-bottom: 3rem;
-} */
+@media screen and (max-width: 767px) {
+  .book {
+    grid-template-areas:
+                'book-cover .'
+                'book-description book-description';
+    grid-template-columns: 250px 1fr;
+    row-gap: 1rem;
+    flex-direction: column;
+    margin-bottom: 3rem;
+  }
+
+  .book__cover-container {
+    grid-column: auto;
+    grid-area: book-cover;
+  }
+
+  .book__description {
+    grid-column: auto;
+    grid-area: book-description;
+  }
+}
 
 .book__cover-container {
   grid-column: book-cover;
