Update styles on the bibliography page

--- a/src/static/css/bibliography.css
+++ b/src/static/css/bibliography.css
@@ -76,6 +76,7 @@ main {
   align-items: center;
   background-color: white;
   padding: 2px;
+  backface-visibility: hidden;
 }
 
 .book__cover-back {
