--- a/src/_includes/components/bibliography/book.njk
+++ b/src/_includes/components/bibliography/book.njk
@@ -15,7 +15,9 @@
   <div class="book__description">
     <span class="book__authors">{{book.authors}}.</span>
     <span class="book__title">{{ book.title }}.</span>
+    {% if book.published_by %}
     <span class="book__published-by">{{ book.published_by }}.</span>
+    {% endif %}
     {% if book.comment %}
       <span class="book__comment">({{ book.comment }})</span>
     {% endif %}
