--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -3,8 +3,8 @@ layout: layouts/base.njk
 ---
 
 {% block styles %}
-<link rel="preload" href="/css/navigation.css" as="style">
-<link rel="stylesheet" href="{{ '/css/about.css' | url }}">
+<link rel="preload" href="/assets/css/navigation.css" as="style">
+<link rel="stylesheet" href="{{ '/assets/css/about.css' | url }}">
 {% endblock %}
 
 <main{% if templateClass %} class="{{ templateClass }}"{% endif %}>
