--- a/src/index.njk
+++ b/src/index.njk
@@ -4,12 +4,24 @@ title: "Andrey Azov — Personal Website"
 ---
 
 <main>
-  <h1>Andrey Azov</h1>
-  <h2>personal site</h2>
+  <h1>
+    <span class="headingLine">Hello.</span>
+    <span class="headingLine">I am Andrey Azov.</span>
+  </h1>
+
+  <p>
+    I build web sites. And sometimes write long-form blog posts.
+  </p>
+
+  <p>
+    I also use this space to collect links on topics that I find interesting:
+  </p>
 
   <nav>
-    <a href="/about">about me</a>
-    <a href="/blog">blog</a>
-    <a href="/diary">diary</a>
+    <ul>
+      <li>Web development</li>
+      <li>Agile software development</li>
+      <li>English language and literature</li>
+    </ul>
   </nav>
 </main>
