--- a/src/publications.njk
+++ b/src/publications.njk
@@ -8,8 +8,8 @@ templateClass: tmpl-about
 
 
 {% block styles %}
-<link rel="preload" href="/css/navigation.css" as="style">
-<link rel="stylesheet" href="{{ '/css/bibliography.css' | url }}">
+<link rel="preload" href="/assets/css/navigation.css" as="style">
+<link rel="stylesheet" href="{{ '/assets/css/bibliography.css' | url }}">
 {% endblock %}
 
 {% block scripts %}
