--- a/src/_includes/layouts/home.njk
+++ b/src/_includes/layouts/home.njk
@@ -6,7 +6,7 @@ templateClass: tmpl-home
 {% block styles %}
 <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet"/>
 <link href="https://fonts.googleapis.com/css?family=PT+Serif" rel="stylesheet"/>
-<link rel="stylesheet" href="{{ '/css/home.css' | url }}">
+<link rel="stylesheet" href="{{ '/assets/css/home.css' | url }}">
 {% endblock %}
 
 {{ content | safe }}
