--- a/src/static/css/home.css
+++ b/src/static/css/home.css
@@ -1,16 +1,12 @@
 @import "global.css";
 
 main {
-  width: 100%;
   max-width: 800px;
-  height: 100%;
   margin: auto;
-  display: grid;
-  grid-template-rows: 30% auto 1fr
+  padding-top: min(10vh, 60px);
 }
 
 h1, h2 {
-  text-align: center;
   color: #606060;
   margin: 0;
 }
@@ -18,17 +14,21 @@ h1, h2 {
 h1 {
   font-size: clamp(30px, 12vw, 70px);
   font-family: 'Inter', sans-serif;
-  align-self: end;
+  /* align-self: end; */
 }
 
 h2 {
-  font-size: clamp(20px, 8vw, 50px);
+  /* font-size: clamp(20px, 8vw, 50px); */
   margin: 1rem 0;
 }
 
 nav {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  font-size: clamp(1rem, 6vw, 28px);
+  /* align-items: center; */
+  /* font-size: clamp(1rem, 6vw, 28px); */
+}
+
+.headingLine {
+  display: block;
 }
