--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -30,5 +30,9 @@ a, a:visited:not([class]) {
 
 ul {
   margin: 0;
-  padding: 0 0 0 2ch;
+  padding: 0 0 0 1.5ch;
+}
+
+ul li {
+  list-style-type: '– ';
 }
